--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Index</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Codificação de Sinais Multimidia</title>
+  </head>
+  <body>
+    <h1>Index</h1>
+  </body>
+</html>
