--- a/index.html
+++ b/index.html
@@ -28,16 +28,32 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100 img-carousel" src="src/img/404.jpg" alt="First slide">
+          <img class="d-block w-100 img-carousel" src="src/img/NossoGrupoMultimídia.png" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 img-carousel" src="src/img/418.jpg" alt="Second slide">
+          <img class="d-block w-100 img-carousel" src="src/img/VideoEAnimacao.png" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 img-carousel" src="src/img/500.jpg" alt="Third slide">
+          <img class="d-block w-100 img-carousel" src="src/img/DCTParaImagem.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 img-carousel" src="src/img/DWTParaImagem.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 img-carousel" src="src/img/PercepcaoAuditiva.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 img-carousel" src="src/img/CodificacaoDeVoz.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 img-carousel" src="src/img/CodificacaoDeAudio.png" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
