--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Grupo 1</a>
+      <a class="navbar-brand" href="#">Codificação de Sinais Multimidia</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -35,13 +35,19 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100 img-carousel" src="src/img/NossoGrupoMultimídia.png" alt="First slide">
+          <a href="/pages/lab1.html">
+            <img class="d-block w-100 img-carousel" src="src/img/NossoGrupoMultimídia.png" alt="First slide">
+          </a>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 img-carousel" src="src/img/VideoEAnimacao.png" alt="Second slide">
+          <a href="/pages/lab2.html">
+            <img class="d-block w-100 img-carousel" src="src/img/VideoEAnimacao.png" alt="Second slide">
+          </a>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 img-carousel" src="src/img/DCTParaImagem.png" alt="Third slide">
+          <a href="/pages/lab3.html">
+            <img class="d-block w-100 img-carousel" src="src/img/DCTParaImagem.png" alt="Third slide">
+          </a>
         </div>
         <div class="carousel-item">
           <img class="d-block w-100 img-carousel" src="src/img/DWTParaImagem.png" alt="Third slide">
@@ -66,8 +72,7 @@
       </a>
     </div>  
 
-    <h1>Olá!</h1>
-    
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
