--- a/pages/lab3.html
+++ b/pages/lab3.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Lab3</h1>
+    <a href="../index.html">
+        <h1>Voltar</h1>
+    </a>
 </body>
 </html>
