--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <a href="/pages/lab1.html">
+          <a href="./pages/lab1.html">
             <img class="d-block w-100 img-carousel" src="src/img/NossoGrupoMultimídia.png" alt="First slide">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="/pages/lab2.html">
+          <a href="./pages/lab2.html">
             <img class="d-block w-100 img-carousel" src="src/img/VideoEAnimacao.png" alt="Second slide">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="/pages/lab3.html">
+          <a href="./pages/lab3.html">
             <img class="d-block w-100 img-carousel" src="src/img/DCTParaImagem.png" alt="Third slide">
           </a>
         </div>
