--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="row">
         <div class="col-sm">
           <div class="card caixa-avatar">
-            <img class="card-img-top" src="/src/img/card1.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./src/img/card1.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">André Cardim</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -85,7 +85,7 @@
           </div>
       
           <div class="card caixa-avatar">
-            <img class="card-img-top" src="/src/img/card1.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./src/img/card1.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Victor Gil</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -96,7 +96,7 @@
         </div>
         <div class="col-sm">
           <div class="card caixa-avatar">
-            <img class="card-img-top" src="/src/img/card1.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./src/img/card1.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Bruno Ferreira</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -105,7 +105,7 @@
           </div>
       
           <div class="card caixa-avatar">
-            <img class="card-img-top" src="/src/img/card1.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./src/img/card1.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Professor Mario Minami</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -116,7 +116,7 @@
         </div>
         <div class="col-sm">
           <div class="card caixa-avatar">
-            <img class="card-img-top" src="/src/img/card1.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./src/img/card1.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Victor Fallara</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
