--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
         <div class="col-sm">
           <div class="card caixa-avatar">
-            <img class="card-img-top card-posicao-img" src="./src/img/card1.jpg" alt="Card image cap">
+            <img class="card-img-top card-posicao-img" src="./src/img/mm.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Victor Fallara</h5>
               <a href="#" class="btn btn-cor">Conhecer mais</a>
