--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="#">Laboratórios</a>
           <a class="nav-item nav-link" href="#">Integrantes</a>
-          <a class="nav-item nav-link" href="#">vazio</a>
+          <!---<a class="nav-item nav-link" href="#">vazio</a>--->
         </div>
       </div>
     </nav>
