--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Codificação de Sinais Multimidia</a>
+      <a class="navbar-brand" href="#">
+        <div class="logo-image">
+          <img src="./src/img/logotipo-ufabc-lateral.png" class="img-fluid">
+        </div>
+      </a>
+      <a class="navbar-brand" href="#">ESTI019 - Codificação de Sinais Multimidia - 3QS21</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -113,7 +118,7 @@
           <div class="card caixa-avatar">
             <img class="card-img-top card-posicao-img" src="./src/img/pikachu.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Mario Minami</h5>
+              <h5 class="card-title">Prof. Dr. Mario Minami</h5>
               <a href="#" class="btn btn-cor">Conhecer mais</a>
             </div>
           </div>
