--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
           </div>
 
           <div class="card caixa-avatar">
-            <img class="card-img-top card-posicao-img" src="./src/img/avatar-victor.png" alt="Card image cap">
+            <img class="card-img-top card-posicao-img" src="./src/img/avatar_victor.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Victor Gil</h5>
               <a href="#" class="btn btn-cor">Conhecer mais</a>
             </div>
           </div>
-      
+
         </div>
         <div class="col-sm">
           <div class="card caixa-avatar">
