--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
           </a>
         </div>
         <div class="carousel-item">
+          <a href="./pages/lab4.html">
           <img class="d-block w-100 img-carousel" src="src/img/Laboratorio4.png" alt="DWT Para Imagem">
+          </a>
         </div>
         <div class="carousel-item">
           <img class="d-block w-100 img-carousel" src="src/img/Laboratorio5.png" alt="Percepção Auditiva">
