Páginas dos labs

--- a/index.html
+++ b/index.html
@@ -63,19 +63,29 @@
           </a>
         </div>
         <div class="carousel-item">
+          <a href="./pages/lab5.html">
           <img class="d-block w-100 img-carousel" src="src/img/Laboratorio5.png" alt="Percepção Auditiva">
+          </a>
         </div>
         <div class="carousel-item">
+          <a href="./pages/lab6.html">
           <img class="d-block w-100 img-carousel" src="src/img/Laboratorio6.png" alt="PDS para processamento de voz">
+          </a>
         </div>
         <div class="carousel-item">
+          <a href="./pages/lab7.html">
           <img class="d-block w-100 img-carousel" src="src/img/Laboratorio7.png" alt="Codificação De Voz">
+          </a>
         </div>
         <div class="carousel-item">
+          <a href="./pages/lab8.html">
           <img class="d-block w-100 img-carousel" src="src/img/Laboratorio8.png" alt="Codificacao De Audio">
+          </a>
         </div>
         <div class="carousel-item">
+          <a href="./pages/lab9.html">
           <img class="d-block w-100 img-carousel" src="src/img/Laboratorio9.png" alt="Midi e Acústica básica">
+          </a>
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
