"Conhecer mais" do prof -> CECS

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <img class="card-img-top card-posicao-img" src="./src/img/pikachu.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Prof. Dr. Mario Minami</h5>
-              <a href="#" class="btn btn-cor">Conhecer mais</a>
+              <a href="https://cecs.ufabc.edu.br/docentes/contatos/23-docentes/132-mario-minami.html" class="btn btn-cor">Conhecer mais</a>
             </div>
           </div>
 
