--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <a>
+            <img class="d-block w-100 img-carousel" src="./src/img/bemvindo.gif" alt="Bem-vindo!">
+          </a>
+        </div>
+        <div class="carousel-item">
           <a href="./pages/lab1.html">
             <img class="d-block w-100 img-carousel" src="src/img/Laboratorio1.png" alt="Nosso Grupo Multimídia">
           </a>
