--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       </a>
     </div>
 
+
     <div class="container">
       <div class="row">
         <div class="col-sm">
@@ -151,6 +152,17 @@
           </div>
       </div>
     </div>
+
+
+  <div class="container">
+
+    <div class=subtitulo><br>Curte um som? Ouça as músicas da comunidade UFABC!<br><br></div>
+
+    <iframe src="https://open.spotify.com/embed/playlist/14TtmkkBvEO4wScCATWBPU" width="100%" height="380"
+            frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
+  </div>
+
 
 
 
