Código fonte, clicar scrolla

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">Laboratórios</a>
-          <a class="nav-item nav-link" href="#">Integrantes</a>
-          <!---<a class="nav-item nav-link" href="#">vazio</a>--->
+          <a class="nav-item nav-link" href="#carouselExampleIndicators">Laboratórios</a>
+          <a class="nav-item nav-link" href="#integrantes">Integrantes</a>
+          <a class="nav-item nav-link" href="https://github.com/BrunoHenriF/CodificacaoSinaisMultimidia">Código-Fonte</a>
         </div>
       </div>
     </nav>
@@ -104,7 +104,7 @@
     </div>
 
 
-    <div class="container">
+    <div class="container" id="integrantes">
       <div class="row">
         <div class="col-sm">
           <div class="card caixa-avatar">
