--- a/pages/lab1.html
+++ b/pages/lab1.html
@@ -23,7 +23,7 @@
             <a class="nav-item nav-link active" href="../index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="../index.html">Laboratórios</a>
             <a class="nav-item nav-link" href="../index.html">Integrantes</a>
-            <!---<a class="nav-item nav-link" href="#">vazio</a>--->
+            <a class="nav-item nav-link" href="https://github.com/BrunoHenriF/CodificacaoSinaisMultimidia">Código-Fonte</a>
         </div>
     </div>
 </nav>
