--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">
         <div class="logo-image">
-          <img src="./src/img/logotipo-ufabc-lateral.png" class="img-fluid">
+          <img src="./src/img/logotipo-ufabc-lateral.png" class="img-fluid img-ufabc">
         </div>
       </a>
       <a class="navbar-brand" href="#">ESTI019 - Codificação de Sinais Multimidia - 3QS21</a>
@@ -21,9 +21,9 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#carouselExampleIndicators">Laboratórios</a>
-          <a class="nav-item nav-link" href="#integrantes">Integrantes</a>
-          <a class="nav-item nav-link" href="https://github.com/BrunoHenriF/CodificacaoSinaisMultimidia">Código-Fonte</a>
+          <a class="nav-item nav-link" href="#">Laboratórios</a>
+          <a class="nav-item nav-link" href="#">Integrantes</a>
+          <a class="nav-item nav-link" href="#">Código-Fonte</a>
         </div>
       </div>
     </nav>
@@ -39,6 +39,8 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="9 "></li>
+
 
       </ol>
       <div class="carousel-inner">
@@ -103,8 +105,9 @@
       </a>
     </div>
 
+    <div class="subtitulo"><h1>Integrantes</h1></div>
 
-    <div class="container" id="integrantes">
+    <div class="container">
       <div class="row">
         <div class="col-sm">
           <div class="card caixa-avatar">
@@ -156,16 +159,12 @@
 
   <div class="container">
 
-    <div class=subtitulo><br>Curte um som? Ouça as músicas da comunidade UFABC!<br><br></div>
+    <div class=subtitulo><h2>Curte um som? Ouça as músicas da comunidade UFABC!</h2></div>
 
     <iframe src="https://open.spotify.com/embed/playlist/14TtmkkBvEO4wScCATWBPU" width="100%" height="380"
             frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
   </div>
-
-
-
-
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
