alinhamento dos logos ufabc nos labs e conserto do link código-fonte

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="#">Laboratórios</a>
           <a class="nav-item nav-link" href="#">Integrantes</a>
-          <a class="nav-item nav-link" href="#">Código-Fonte</a>
+          <a class="nav-item nav-link" href="https://github.com/BrunoHenriF/CodificacaoSinaisMultimidia">Código-Fonte</a>
         </div>
       </div>
     </nav>
@@ -39,7 +39,7 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="9 "></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
 
 
       </ol>
