--- a/pages/lab7.html
+++ b/pages/lab7.html
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="../index.html">
         <div class="logo-image" >
-            <img src="../src/img/logotipo-ufabc-lateral.png" class="img-fluid">
+            <img src="../src/img/logotipo-ufabc-lateral.png" class="img-fluid img-ufabc">
         </div>
     </a>
     <a class="navbar-brand" href="../index.html">ESTI019 - Codificação de Sinais Multimidia - 3QS21</a>
