melhoria no posicionamento do gif

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <a>
-            <img class="d-block w-100 img-carousel" src="./src/img/bemvindo.gif" alt="Bem-vindo!">
+            <img class="d-block w-100 img-carousel gif-carousel" src="./src/img/bemvindo.gif" alt="Bem-vindo!">
           </a>
         </div>
         <div class="carousel-item">
