Centralizado logo ufabc

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">
         <div class="logo-image">
-          <img src="./src/img/logotipo-ufabc-lateral.png" class="img-fluid img-ufabc">
+          <img src="./src/img/logotipo-ufabc-lateral.png" class="img-fluid">
         </div>
       </a>
       <a class="navbar-brand" href="#">ESTI019 - Codificação de Sinais Multimidia - 3QS21</a>
