Espaço adicional na parte musica

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 
   <div class="container">
 
-    <div class=subtitulo><h2>Curte um som? Ouça as músicas da comunidade UFABC!</h2></div>
-
+    <div class=subtitulo><h2><br>Curte um som? Ouça as músicas da comunidade UFABC!</h2></div>
+    <br>
     <iframe src="https://open.spotify.com/embed/playlist/14TtmkkBvEO4wScCATWBPU" width="100%" height="380"
             frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
