--- a/pages/lab9.html
+++ b/pages/lab9.html
@@ -21,8 +21,8 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="../index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="../index.html">Laboratórios</a>
-            <a class="nav-item nav-link" href="../index.html">Integrantes</a>
+            <a class="nav-item nav-link" href="../index.html#carouselExampleIndicators">Laboratórios</a>
+            <a class="nav-item nav-link" href="../index.html#integrantes">Integrantes</a>
             <a class="nav-item nav-link" href="https://github.com/BrunoHenriF/CodificacaoSinaisMultimidia">Código-Fonte</a>
         </div>
     </div>
