--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </a>
         </div>
         <div class="carousel-item">
-          <a href="./pages/lab1.html">
+          <a href="./pages/colab_lab2.html">
             <img class="d-block w-100 img-carousel" src="src/img/Laboratorio1.png" alt="Nosso Grupo Multimídia">
           </a>
         </div>
