--- a/pages/lab2.html
+++ b/pages/lab2.html
@@ -28,12 +28,13 @@
     </div>
 </nav>
 
-<!-- os dois jeitos abaixo servem pra colocar o html na página, mas ambos ficam quebrados -->
+<div class="container">
 
-<!-- <object data="./colab_lab2.html" type="text/html">
-</object> -->
+    <div class=titulo> Vídeo e Animação</div>
+    
 
-<iframe src="./colab_lab2.html" seamless></iframe>
+</div>
+
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
