Adição do link no lab 2

--- a/pages/lab2.html
+++ b/pages/lab2.html
@@ -30,9 +30,9 @@
 
 <div class="container">
 
-    <div class=titulo> Vídeo e Animação</div>
+    <div class=titulo>VÍDEO E ANIMAÇÃO</div>
+    <h4>Link para o Notebook online do Google Colaboratory: https://colab.research.google.com/drive/1REWh7-0DlOVP5tlUs5KWeG3Zk7x_PMyi</h4>
     
-
 </div>
 
 
