--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </a>
         </div>
         <div class="carousel-item">
-          <a href="./pages/colab_lab2.html">
+          <a href="./pages/lab2.html">
             <img class="d-block w-100 img-carousel" src="src/img/Laboratorio2.png" alt="Video E Animacao">
           </a>
         </div>
