Adição do link no lab 2

--- a/pages/lab2.html
+++ b/pages/lab2.html
@@ -31,7 +31,8 @@
 <div class="container">
 
     <div class=titulo>VÍDEO E ANIMAÇÃO</div>
-    <h4>Link para o Notebook online do Google Colaboratory: https://colab.research.google.com/drive/1REWh7-0DlOVP5tlUs5KWeG3Zk7x_PMyi</h4>
+    <br><br> 
+    <h4>Link para o Notebook online do Google Colaboratory:<a href="https://colab.research.google.com/drive/1REWh7-0DlOVP5tlUs5KWeG3Zk7x_PMyi"> https://colab.research.google.com/drive/1REWh7-0DlOVP5tlUs5KWeG3Zk7x_PMyi </a></h4>
     
 </div>
 
