adição do html do colab no lab2

--- a/pages/lab2.html
+++ b/pages/lab2.html
@@ -32,8 +32,8 @@
 
     <div class=titulo>VÍDEO E ANIMAÇÃO</div>
     <br><br> 
-    <h4>Link para o Notebook online do Google Colaboratory:<a href="https://colab.research.google.com/drive/1REWh7-0DlOVP5tlUs5KWeG3Zk7x_PMyi"> https://colab.research.google.com/drive/1REWh7-0DlOVP5tlUs5KWeG3Zk7x_PMyi </a></h4>
-    
+    <h4><a href="./colab_lab2.html">Link para o relatório com as imagens e vídeos (pode demorar um pouco para carregar)</a></h4>
+    <h4><a href="https://colab.research.google.com/drive/1REWh7-0DlOVP5tlUs5KWeG3Zk7x_PMyi">Link para o Notebook online do Google Colaboratory</a>
 </div>
 
 
